crates/llvmkit-ir/tests/compile_fail/read_only_pass_manager_rejects_transform_pass.stderr
error[E0277]: the trait bound `Mutates: ReadOnlyModulePass<'_, _>` is not satisfied
  --> tests/compile_fail/read_only_pass_manager_rejects_transform_pass.rs:17:18
   |
17 |     mpm.add_pass(Mutates);
   |         -------- ^^^^^^^ unsatisfied trait bound
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `ReadOnlyModulePass<'_, _>` is not implemented for `Mutates`
  --> tests/compile_fail/read_only_pass_manager_rejects_transform_pass.rs:6:1
   |
 6 | struct Mutates;
   | ^^^^^^^^^^^^^^
help: the trait `ReadOnlyModulePass<'ctx, B>` is implemented for `ModuleToFunctionPassAdaptor<'ctx, B, PreservesVerification>`
  --> src/pass_manager.rs
   |
   | / impl<'ctx, B: ModuleBrand + 'ctx> ReadOnlyModulePass<'ctx, B>
   | |     for ModuleToFunctionPassAdaptor<'ctx, B, PreservesVerification>
   | |___________________________________________________________________^
note: required by a bound in `ModulePassManager::<'ctx, B, PreservesVerification>::add_pass`
  --> src/pass_manager.rs
   |
   |     pub fn add_pass<P>(&mut self, pass: P)
   |            -------- required by a bound in this associated function
   |     where
   |         P: ReadOnlyModulePass<'ctx, B> + 'ctx,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ModulePassManager::<'ctx, B, PreservesVerification>::add_pass`
